# microProfiler

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  micro.yml  pyproject.toml
docs/: api.md
examples/: pipeline_config.yml  quickstart.py
microProfiler/: __init__.py  __main__.py  cli.py  config.py  logging_utils.py  pipeline.py
microProfiler/gui/: app.py  image_widgets.py  main_window.py  pipeline_controller.py  progress_bar.py  session.py  sidebar.py  state.py  style.qss
microProfiler/gui/panels/: __init__.py  base_step_panel.py  step_basic.py  step_convert.py  step_profile.py  step_resize.py  step_segment.py  step_tile.py  step_zproject.py
microProfiler/gui/workers/: __init__.py  pipeline_worker.py  preview_worker.py
microProfiler/io/: __init__.py  database.py  dataset.py  export.py  loaders.py
microProfiler/preprocessing/: __init__.py  _swap.py  basic_correction.py  converter.py  resizer.py  tile_splitter.py  z_projection.py
microProfiler/preprocessing/basic/: __init__.py  basic.py  metrics.py
microProfiler/profiling/: __init__.py  extras.py  image_profiler.py  object_profiler.py
microProfiler/segmentation/: cellpose.py
openspec/changes/archive/2026-05-14-cleanup-lint-and-docs/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-14-pipeline-design-fixes/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-15-add-env-file-and-api-docs/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-15-add-full-pipeline-test/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-15-improve-dataset-and-docs/: design.md  (+2 more)
openspec/specs/api-documentation/: spec.md
openspec/specs/converter-resize/: spec.md
openspec/specs/dataset-metadata-improvements/: spec.md
openspec/specs/dataset-subsetting/: spec.md
openspec/specs/env-setup/: spec.md
openspec/specs/full-pipeline-integration/: spec.md
openspec/specs/pipeline-group-cols/: spec.md
openspec/specs/preprocessing-output-structure/: spec.md
src/microProfiler/: __init__.py  __main__.py  _shortcut.py  cli.py  config.py  logging_utils.py  pipeline.py
src/microProfiler/gui/: __init__.py  app.py  image_widgets.py  main_window.py  pipeline_controller.py  progress_bar.py  session.py  sidebar.py  state.py
src/microProfiler/io/: database.py  dataset.py
src/microProfiler/preprocessing/: _swap.py  basic_correction.py  converter.py  resizer.py  tile_splitter.py  z_projection.py
src/microProfiler/profiling/: extras.py  image_profiler.py  object_profiler.py
src/microProfiler/segmentation/: __init__.py  cellpose.py
tests/: benchmark_processpool.py  conftest.py  test_cli.py  test_config.py  test_converter.py  test_database.py  test_dataset.py  test_export.py  test_extras.py  test_full_pipeline.py  test_image_profiler.py  test_loaders.py  test_object_profiler.py  test_resizer.py  test_swap.py  test_tile_splitter.py  test_z_projection.py
(+109 files in other folders)
