[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "microProfiler"
dynamic = ["version"]
description = "Microscopy image preprocessing, segmentation, and profiling pipeline"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Hao He" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering :: Image Processing",
]
keywords = ["microscopy", "image-analysis", "cellpose", "segmentation"]
dependencies = [
    "numpy",
    "pandas",
    "natsort",
    "tqdm",
    "cellpose",
    "torch",
    "jax",
    "scikit-image",
    "scipy",
    "pydantic>=2.0",
    "tifffile",
    "Pillow",
    "pyyaml",
    "PySide6",
]

[project.urls]
Homepage = "https://github.com/soulong/microProfiler"
Repository = "https://github.com/soulong/microProfiler"

[project.scripts]
microprofiler = "microProfiler.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/microProfiler"]

[tool.hatch.version]
path = "src/microProfiler/__init__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
